# wilds-science-camera

./: .gitignore  pyproject.toml  pyrightconfig.json
src/wilds/science_camera/: __init__.py  science_camera.py
